--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
-
-
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto" rel="stylesheet">
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
+
+  key = AIzaSyBTzSQK2ay-zZ88ZRLz0muYH7rgCfnhgaY
   -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTzSQK2ay-zZ88ZRLz0muYH7rgCfnhgaY"></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <div id="main">
-    Hello world!   <!-- You'll be deleting this line in the course -->
 
     <!--
     Everything from here to the <script> tag below is the skeleton of your
